frameworks/laravel/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-svc
  namespace: myapp
  labels:
    app: laravel
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: metrics
    port: 8081
    targetPort: metrics
  selector:
    app: laravel
